--- a/about.html
+++ b/about.html
@@ -1,17 +1,28 @@
 ---
 layout: about
-title: About
+title: 公司简介
 ---
 
-<h2>About</h2>
+<h2>公司简介</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+    本公司致力于3GPP R16场景的实现，提供可商用的5G产品，具体请见产品介绍。
+    
+    <img
+      class="lazyload borderless"
+      loading="lazy"
+      src="data:image/gif;base64,R0lGODdhAQABAIABAICAgP///ywAAAAAAQABAAACAkQBADs="
+      data-src="/assets/images/banners/company-profile.jpg"
+      alt="company-profile."
+    />
+    
+    <noscript>
+      <img
+        class="borderless"
+        loading="lazy"
+        src="/assets/images/banners/company-profile.jpg"
+        alt="company-profile."
+      />
+    </noscript>
 </p>
 
-<p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
-</p>
