--- a/about.html
+++ b/about.html
@@ -8,21 +8,7 @@ title: 公司简介
 <p>
     本公司致力于3GPP R16场景的实现，提供可商用的5G产品，具体请见产品介绍。
     
-    <img
-      class="lazyload borderless"
-      loading="lazy"
-      src="data:image/gif;base64,R0lGODdhAQABAIABAICAgP///ywAAAAAAQABAAACAkQBADs="
-      data-src="/assets/images/banners/company-profile.jpg"
-      alt="company-profile."
-    />
-    
-    <noscript>
-      <img
-        class="borderless"
-        loading="lazy"
-        src="/assets/images/banners/company-profile.jpg"
-        alt="company-profile."
-      />
-    </noscript>
+
+      <img src="/assets/images/banners/company-profile.jpg"/>
 </p>
 
